--- a/index.html
+++ b/index.html
@@ -6,19 +6,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=PT+Mono&display=swap"
       rel="stylesheet"
     />
   </head>
 
   <body>
     <style>
-      * {
-        font-family: "Roboto", sans-serif;
-      }
       .button {
-        margin: 7px;
+        margin: 5px 25px;
         text-decoration: none;
+        font-family: "PT Mono";
+        box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
+        border-radius: 5px;
+        padding: 10px;
+        width: 250px;
+        transition: 200ms linear all;
+      }
+      .button:hover {
+        background: rgba(0, 0, 100, 0.1);
       }
     </style>
     <header
@@ -26,8 +32,8 @@
         display: flex;
         position: relative;
         width: 100%;
-        height: 400px;
-        overflow: hidden;
+        height: 350px;
+        overflow: auto;
         background: white;
         justify-content: space-between;
         align-items: start;
@@ -41,20 +47,39 @@
           justify-content: center;
           flex-direction: column;
           text-align: center;
-          font-size: 24px;
+          font-size: 18px;
         "
       >
-        <h4 style="margin-bottom: 0px;">Stand with Israel</h4>
-        <p style="max-width: 600px;">
+        <h2 style="bottom: 0; font-family: PT Mono;">
+          Stand with Israel
+        </h2>
+        <p style="
+          margin: 0 0 20px 0;
+          padding: 0 20px;
+          max-width: 800px;
+          font-family: PT Mono;
+          font-size: 20px;
+          line-height: 28px">
           Support the people of Israel as they face the aftermath of the
           atrocities committed by Hamas on October 7th
         </p>
+        <div
+        style="
+          flex: 2;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: row;
+          flex-wrap: wrap;
+          text-align: center;
+        "
+      >
         <a
           class="button"
           rel="noopener noreferrer nofollow"
           target="_blank"
           href="https://youtu.be/b10ymsjOF3w?si=5x1io6dDn_Cgqfrn"
-          >President Biden's Statement</a
+          >Biden's Statement</a
         >
         <a
           class="button"
@@ -77,9 +102,12 @@
           href="https://www.standwithisrael.co.il/"
           >Take Action</a
         >
-        <img
-          src="https://1.bp.blogspot.com/-G2-AvLhbCCs/YDfIrrEJP3I/AAAAAAAA4Q4/fv_Xf7777E8yNjHgs4ATKj2K7hpGBgn_QCLcBGAsYHQ/s0/Flag_of_Israel.gif"
+        <div
           style="
+            background-image: url('https://1.bp.blogspot.com/-G2-AvLhbCCs/YDfIrrEJP3I/AAAAAAAA4Q4/fv_Xf7777E8yNjHgs4ATKj2K7hpGBgn_QCLcBGAsYHQ/s0/Flag_of_Israel.gif');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
             position: absolute;
             opacity: 0.1;
             filter: contrast(200%);
@@ -87,13 +115,9 @@
             left: 0;
             right: 0;
             top: 0;
-            width: 110%;
-            margin-top: 200px;
-            transform: translateY(-50%);
+            bottom: 0;
             pointer-events: none;
           "
-          background-repeat="no-repeat"
-          background-position="center"
         />
       </div>
     </header>
