--- a/index.html
+++ b/index.html
@@ -26,19 +26,29 @@
       .button:hover {
         background: rgba(0, 0, 100, 0.1);
       }
-    </style>
-    <header
-      style="
+      header {
         display: flex;
         position: relative;
         width: 100%;
-        height: 350px;
+        height: 220px;
         overflow: auto;
         background: white;
         justify-content: space-between;
         align-items: start;
-      "
-    >
+      }
+      @media only screen and (max-width: 1280px) {
+        header {
+          height: 300px;
+        }
+      }
+      @media only screen and (max-width: 600px) {
+        header {
+          height: 500px;
+        }
+      }
+
+    </style>
+    <header>
       <div
         style="
           flex: 2;
