--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
   <body>
     <style>
+      body {
+        margin: 0;
+      }
       .button {
         margin: 5px 25px;
         text-decoration: none;
