--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=PT+Mono&display=swap"
-      rel="stylesheet"
-    />
   </head>
 
   <body>
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500;600;700;800&display=swap');
+    </style>
+    <style>
       body {
         margin: 0;
+      }
+      * {
+        font-family: 'Gabarito', sans-serif;
+        font-size: 22px;
       }
       .button {
         margin: 5px 25px;
         text-decoration: none;
-        font-family: "PT Mono";
+
         box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
         border-radius: 5px;
         padding: 10px;
@@ -33,23 +34,26 @@
         display: flex;
         position: relative;
         width: 100%;
-        height: 220px;
         overflow: auto;
         background: white;
         justify-content: space-between;
         align-items: start;
       }
-      @media only screen and (max-width: 1280px) {
+      @media only screen and (min-width: 1281px) {
+        header {
+          height: 220px; 
+        }
+      }
+      @media only screen and (max-width: 1280px) and (min-width: 641px) {
         header {
           height: 300px;
         }
       }
-      @media only screen and (max-width: 600px) {
+      @media only screen and (max-width: 640px) {
         header {
-          height: 500px;
+          height: 400px;
         }
       }
-
     </style>
     <header>
       <div
@@ -60,18 +64,15 @@
           justify-content: center;
           flex-direction: column;
           text-align: center;
-          font-size: 18px;
         "
       >
-        <h2 style="bottom: 0; font-family: PT Mono;">
+        <h2 style="bottom: 0">
           Stand with Israel
         </h2>
         <p style="
           margin: 0 0 20px 0;
           padding: 0 20px;
           max-width: 800px;
-          font-family: PT Mono;
-          font-size: 20px;
           line-height: 28px">
           Support the people of Israel as they face the aftermath of the
           atrocities committed by Hamas on October 7th
