--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       .button {
         margin: 5px 25px;
         text-decoration: none;
-
         box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
         border-radius: 5px;
         padding: 10px;
@@ -38,21 +37,54 @@
         background: white;
         justify-content: space-between;
         align-items: start;
+        height: 250px; 
       }
-      @media only screen and (min-width: 1281px) {
-        header {
-          height: 220px; 
-        }
+      p {
+        margin: 0 0 20px 0;
+        padding: 0 20px;
+        max-width: 800px;
+        line-height: 28px
       }
-      @media only screen and (max-width: 1280px) and (min-width: 641px) {
-        header {
-          height: 300px;
-        }
-      }
+
       @media only screen and (max-width: 640px) {
-        header {
-          height: 400px;
+        h2 {
+          font-size: 22px;
         }
+        p {
+          font-size: 18px;
+          line-height: 20px;
+          width: auto;
+        }
+        .button {
+          font-size: 18px;
+          margin: 3px;
+          padding: 7px;
+          width: auto;
+        }
+      }
+      nav {
+        flex: 2;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        text-align: center;
+      }
+      .flag {
+        background-image: url('https://1.bp.blogspot.com/-G2-AvLhbCCs/YDfIrrEJP3I/AAAAAAAA4Q4/fv_Xf7777E8yNjHgs4ATKj2K7hpGBgn_QCLcBGAsYHQ/s0/Flag_of_Israel.gif');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        position: absolute;
+        opacity: 0.1;
+        filter: contrast(200%);
+        filter: saturate(250%);
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        pointer-events: none;
       }
     </style>
     <header>
@@ -69,25 +101,11 @@
         <h2 style="bottom: 0">
           Stand with Israel
         </h2>
-        <p style="
-          margin: 0 0 20px 0;
-          padding: 0 20px;
-          max-width: 800px;
-          line-height: 28px">
+        <p>
           Support the people of Israel as they face the aftermath of the
           atrocities committed by Hamas on October 7th
         </p>
-        <div
-        style="
-          flex: 2;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          flex-direction: row;
-          flex-wrap: wrap;
-          text-align: center;
-        "
-      >
+        <nav>
         <a
           class="button"
           rel="noopener noreferrer nofollow"
@@ -116,24 +134,8 @@
           href="https://www.standwithisrael.co.il/"
           >Take Action</a
         >
-        <div
-          style="
-            background-image: url('https://1.bp.blogspot.com/-G2-AvLhbCCs/YDfIrrEJP3I/AAAAAAAA4Q4/fv_Xf7777E8yNjHgs4ATKj2K7hpGBgn_QCLcBGAsYHQ/s0/Flag_of_Israel.gif');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-            position: absolute;
-            opacity: 0.1;
-            filter: contrast(200%);
-            filter: saturate(250%);
-            left: 0;
-            right: 0;
-            top: 0;
-            bottom: 0;
-            pointer-events: none;
-          "
-        />
-      </div>
+        <div class="flag" />
+      </nav>
     </header>
   </body>
 </html>
